argocd/applicationsets/tools/n8n/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: n8n
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-gateway
      namespace: kube-system
  hostnames:
    - n8n.horacio.cloud
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: n8n
          port: 5678
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
